<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="300dip"
	android:layout_height="fill_parent">

	<LinearLayout android:orientation="vertical"
		android:layout_width="300dip" android:layout_height="fill_parent">

		<Button android:id="@+id/allButtonsOn" android:layout_height="wrap_content"
			android:layout_width="fill_parent" android:onClick="turnAllButtonsOn"
			android:text="@string/allButtonsOnText" />

		<Button android:id="@+id/allButtonsOff" android:layout_height="wrap_content"
			android:layout_width="fill_parent" android:onClick="turnAllButtonsOff"
			android:text="@string/allButtonsOffText" />

		<TableLayout android:layout_height="0dp"
			android:id="@+id/dataTableLayoutConfiguration" android:shrinkColumns="0"
			android:stretchColumns="1" android:layout_width="fill_parent"
			android:gravity="clip_vertical" android:layout_weight="0.40">

			<CheckBox
			    android:id="@+id/graphVisibilityCheckbox"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/graphVisibilityCheckboxTitle" />

		</TableLayout>

	</LinearLayout>
</ScrollView>
