<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
    <LinearLayout
        android:id="@+id/overallCurrentValuesLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:orientation="vertical" android:layout_marginTop="20dip" android:layout_gravity="center_horizontal">
        <Button android:layout_width="wrap_content" android:layout_gravity="center_horizontal" android:layout_height="wrap_content" android:id="@+id/genericDefaultValues" android:text="@string/genericDefaultValues"></Button>
        <Button android:layout_width="wrap_content" android:text="@string/loadSavedValuesButtonText" android:id="@+id/loadSavedValuesButton" android:layout_gravity="center_horizontal" android:layout_height="wrap_content"></Button>
        <Button android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/editWithoutDefaultValuesButtonText" android:id="@+id/editWithoutDefaultValuesButton"></Button>
        <Button android:layout_width="wrap_content" android:layout_gravity="center_horizontal" android:layout_height="wrap_content" android:id="@+id/defaultValuesFromAddress" android:text="@string/defaultValuesFromAddress"></Button>
    </LinearLayout>
    
</LinearLayout>
