<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/overallRentalScrollView" android:layout_width="fill_parent"
	android:layout_height="wrap_content" android:background="@drawable/input_background">
	<LinearLayout android:layout_height="wrap_content"
		android:id="@+id/overallFinancialEnvironmentLinearLayout"
		android:layout_width="fill_parent" android:orientation="vertical">

		<!-- the following is just to catch the focus and do nothing with it -->
		<LinearLayout android:focusable="true"
			android:focusableInTouchMode="true" android:layout_width="0px"
			android:layout_height="0px" />
		<LinearLayout android:layout_height="wrap_content"
			android:id="@+id/inflationRateLinearLayout" android:layout_width="fill_parent" android:baselineAligned="false">
			<TextView android:textAppearance="?android:attr/textAppearanceSmall"
				android:layout_weight="0.50" android:layout_width="0dip"
				android:layout_height="wrap_content" android:id="@+id/estimatedRentPaymentsTitle"
				android:text="@string/estimatedRentPaymentsTitleText"></TextView>
			<EditText android:layout_weight="0.50" android:layout_width="0dip"
				android:layout_height="wrap_content" android:id="@+id/estimatedRentPaymentsEditText"
				android:inputType="numberDecimal">
			</EditText>
			<ImageButton android:id="@+id/estimatedRentPaymentsHelpButton" android:background="@null"
				android:layout_height="fill_parent" android:src="@drawable/question_mark"
				android:layout_width="wrap_content"
				android:scaleType="fitCenter" android:padding="3dip" />
		</LinearLayout>
		<LinearLayout android:layout_height="wrap_content"
			android:id="@+id/realEstateAppreciationRateLinearLayout"
			android:layout_width="fill_parent" android:baselineAligned="false">
			<TextView android:textAppearance="?android:attr/textAppearanceSmall" android:layout_weight="0.50"
				android:layout_width="0dip" android:layout_height="wrap_content"
				android:id="@+id/yearlyHomeInsuranceTitle" android:text="@string/yearlyHomeInsuranceTitleText"></TextView>
			<EditText android:layout_weight="0.50" android:layout_width="0dip"
				android:layout_height="wrap_content" android:id="@+id/yearlyHomeInsuranceEditText"
				android:inputType="numberDecimal"></EditText>
			<ImageButton android:id="@+id/yearlyHomeInsuranceHelpButton" android:background="@null"
				android:layout_height="fill_parent" android:src="@drawable/question_mark"
				android:layout_width="wrap_content"
				android:scaleType="fitCenter" android:padding="3dip" />
		</LinearLayout>
		<LinearLayout android:layout_height="wrap_content"
			android:id="@+id/vacancyAndCreditLossLinearLayout"
			android:layout_width="fill_parent" android:baselineAligned="false">
			<TextView android:text="@string/vacancyAndCreditLossTitleText"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:layout_height="wrap_content" android:id="@+id/vacancyAndCreditLossTitle"
				android:layout_width="0dip" android:layout_weight="0.50" ></TextView>
			<EditText android:layout_weight="0.50" android:layout_width="0dip"
				android:id="@+id/vacancyAndCreditLossEditText"
				android:layout_height="wrap_content" android:inputType="numberDecimal"></EditText>
			<ImageButton android:id="@+id/vacancyAndCreditLossHelpButton" android:background="@null"
				android:layout_height="fill_parent" android:src="@drawable/question_mark"
				android:layout_width="wrap_content"
				android:scaleType="fitCenter" android:padding="3dip" />
		</LinearLayout>

		<LinearLayout android:layout_height="wrap_content"
			android:layout_width="fill_parent" android:id="@+id/fixupCostsLinearLayout" android:baselineAligned="false">
			<TextView android:textAppearance="?android:attr/textAppearanceSmall"
				android:layout_width="0dip" android:layout_height="wrap_content"
				android:layout_weight="0.50"
				android:id="@+id/fixupCostsTitle" android:text="@string/fixupCostsTitleText"></TextView>
			<EditText android:layout_weight="0.50" android:layout_width="0dip"
				android:layout_height="wrap_content" android:id="@+id/fixupCostsEditText"
				android:inputType="numberDecimal"></EditText>
			<ImageButton android:id="@+id/fixupCostsHelpButton" android:background="@null"
				android:layout_height="fill_parent" android:src="@drawable/question_mark"
				android:layout_width="wrap_content"
				android:scaleType="fitCenter" android:padding="3dip" />
		</LinearLayout>
		<LinearLayout android:layout_height="wrap_content"
			android:layout_width="fill_parent" android:id="@+id/initialYearlyGeneralExpensesLinearLayout"
			android:baselineAligned="false">
			<TextView android:textAppearance="?android:attr/textAppearanceSmall" android:layout_weight="0.50" 
				android:layout_height="wrap_content" android:id="@+id/TextView02"
				android:text="@string/initialYearlyGeneralExpensesTitleText"
				android:layout_width="0dp"></TextView>
			<EditText android:layout_weight="0.50" android:layout_width="0dp"
				android:layout_height="wrap_content" android:id="@+id/initialYearlyGeneralExpensesEditText"
				android:inputType="numberDecimal"></EditText>
			<ImageButton android:id="@+id/initialYearlyGeneralExpensesHelpButton" android:background="@null"
				android:layout_height="fill_parent" android:src="@drawable/question_mark"
				 android:layout_width="wrap_content"
				android:scaleType="fitCenter" android:padding="3dip" />
		</LinearLayout>
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:id="@+id/requiredRateOfReturnLinearLayout" android:baselineAligned="false">
			<TextView android:layout_width="0dip"
				android:textAppearance="?android:attr/textAppearanceSmall" android:layout_weight="0.50"
				android:layout_height="wrap_content" android:id="@+id/requiredRateOfReturnTitle"
				android:text="@string/requiredRateOfReturnTitleText"></TextView>
			<EditText android:layout_width="0dip"
				android:layout_weight="0.50" android:layout_height="wrap_content"
				android:id="@+id/requiredRateOfReturnEditText" android:inputType="numberDecimal"></EditText>
			<ImageButton android:id="@+id/requiredRateOfReturnHelpButton" android:background="@null"
				android:layout_height="fill_parent" android:src="@drawable/question_mark"
				 android:layout_width="wrap_content"
				android:scaleType="fitCenter" android:padding="3dip" />
		</LinearLayout>
	</LinearLayout>
</ScrollView>
